# SourceXtractorPlusPlus

./: .buildinfo  .cproject  .editorconfig  .gitattributes  .gitignore  .jenkinsFile  .project  .travis.yml  Association.html  Background.html  CMakeLists.txt  CPPLINT.cfg  Config.html  ConfigAPI.html  Flagging.html  Input.html  Installing.html  Makefile  Model.html  Output.html  Position.html  Processing.html  README.md  TestData.html  Troubles.html  Weighting.html  build-appimage.sh  columns_units.txt  config.yaml  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  test.config
ModelFitting/: CMakeLists.txt
ModelFitting/ModelFitting/: utils.h
ModelFitting/ModelFitting/Engine/: AsinhChiSquareComparator.h  CeresEngine.h  ChiSquareComparator.h  DataVsModelInputTraits.h  DataVsModelResiduals.h  EngineParameterManager.h  EngineValueResidual.h  GSLEngine.h  LeastSquareEngine.h  LeastSquareEngineManager.h  LeastSquareSummary.h  LevmarEngine.h  LogChiSquareComparator.h  OpenCvDataVsModelInputTraits.h  ResidualBlockProvider.h  ResidualEstimator.h  WorldValueResidual.h
ModelFitting/ModelFitting/Image/: ImageTraits.h  NullPsf.h  OpenCvMatImageTraits.h  OpenCvPsf.h  PsfTraits.h
ModelFitting/ModelFitting/Models/: AutoSharp.h  CircularlySymmetricModelComponent.h  CompactExponentialModel.h  CompactModelBase.h  CompactSersicModel.h  ConstantModel.h  ExtendedModel.h  FlattenedMoffatComponent.h  FrameModel.h  ModelComponent.h  OldSharp.h  OnlySmooth.h  PointModel.h  PositionedModel.h  RotatedModelComponent.h  ScaledModelComponent.h  SersicProfile.h  SharpRegionManager.h  TransformModelComponent.h  TransformedModel.h
ModelFitting/ModelFitting/Parameters/: BasicParameter.h  CoordinateConverter.h  DependentParameter.h  EngineParameter.h  ExpSigmoidConverter.h  ManualParameter.h  NeutralConverter.h  NormalizedConverter.h  ReferenceUpdater.h  SigmoidConverter.h
ModelFitting/auxdir/: image.fits
ModelFitting/conf/ExampleModule/: exampleCppProgram.conf
ModelFitting/src/lib/: ExampleClass.cpp
ModelFitting/src/program/: Example1.cpp  Example2.cpp  Example3.cpp  Example4.cpp  ExampleProgram.cpp  Example_SimpleFit.cpp  Example_gal.cpp  Example_gal2.cpp  utils.h
ModelFitting/tests/python/: ExampleClass_test.py
ModelFitting/tests/src/: DependentParameter_test.cpp  EngineParameter_test.cpp  NeutralConverter_test.cpp
PythonConfig/: CMakeLists.txt
PythonConfig/PythonConfig/: MeasurementImage.h  ObjectInfo.h  PyAperture.h  PyColumn.h  PyId.h  PyMeasurementImage.h  PythonInterpreter.h
PythonConfig/PythonConfig/Configuration/: ApertureConfig.h  MeasurementImageConfig.h  ModelFittingConfig.h  PythonConfig.h
PythonConfig/src/lib/: MeasurementImage.cpp  ObjectInfo.cpp  PyAperture.cpp  PyColumn.cpp  PyId.cpp  PyMeasurementImage.cpp  PythonInterpreter.cpp  PythonModule.cpp
PythonConfig/src/program/: tt.cpp
SEFramework/: CMakeLists.txt
SEFramework/SEFramework/Aperture/: Aperture.h  CircularAperture.h  EllipticalAperture.h  Flagging.h  FluxMeasurement.h  NeighbourInfo.h  TransformedAperture.h
SEFramework/SEFramework/Background/: Background.h  BackgroundAnalyzer.h
SEFramework/SEFramework/Configuration/: Configurable.h  PluginConfig.h
SEFramework/SEFramework/Convolution/: Convolution.h  DFT.h  DirectConvolution.h  OpenCVConvolution.h
SEFramework/SEFramework/CoordinateSystem/: CoordinateSystem.h  WCS.h
SEFramework/SEFramework/FFT/: FFT.h  FFTHelper.h
SEFramework/SEFramework/FITS/: FitsFile.h  FitsFileManager.h  FitsImageSource.h  FitsReader.h  FitsWriter.h  TemporaryFitsImageSource.h
SEFramework/SEFramework/Filesystem/: TemporaryFile.h
SEFramework/SEFramework/Frame/: Frame.h
SEFramework/SEFramework/Image/: BufferedImage.h  ClippedImage.h  ConstantImage.h  ConvolutionImageProcessing.h  FitsImageSource.h  FitsReader.h  FitsWriter.h  FunctionalImage.h  Image.h  ImageAccessor.h  ImageBase.h  ImageChunk.h  ImageProcessing.h  ImageProcessingList.h  ImageSource.h  ImageSourceWithMetadata.h  ImageTile.h  InterpolatedImage.h  InterpolatedImageSource.h  MaskedImage.h  MirrorImage.h  MultiplyImage.h  PaddedImage.h  ProcessedImage.h  ProcessingImageSource.h  RecenterImage.h  ScaledImageSource.h  SnrImage.h  SubImage.h  SubtractImage.h  TemporaryFitsImageSource.h  ThresholdedImage.h  TileManager.h  VectorImage.h  WriteableBufferedImage.h  WriteableImage.h
SEFramework/SEFramework/Output/: Output.h  OutputRegistry.h
SEFramework/SEFramework/Pipeline/: Deblending.h  Measurement.h  Partition.h  PipelineStage.h  Prefetcher.h  Segmentation.h  SourceGrouping.h
SEFramework/SEFramework/Plugin/: Plugin.h  PluginAPI.h  PluginManager.h  StaticPlugin.h
SEFramework/SEFramework/Property/: DetectionFrame.h  ObjectWithProperties.h  Property.h  PropertyHolder.h  PropertyId.h  PropertyNotFoundException.h
SEFramework/SEFramework/Psf/: Psf.h  VariablePsf.h  VariablePsfStack.h
SEFramework/SEFramework/Source/: SimpleSource.h  (+16 more)
SEFramework/auxdir/: multiple_hdu.fits  wcs_header.fits  with_primary.fits
SEImplementation/: CMakeLists.txt
SEMain/: CMakeLists.txt
SEMain/SEMain/: PluginConfig.h  Progress.h  ProgressBar.h  ProgressListener.h  ProgressLogger.h  ProgressMediator.h  ProgressNCurses.h  ProgressPrinter.h  ProgressPrinterConfiguration.h  ProgressPrinterFactory.h  ProgressReporter.h  ProgressReporterConfiguration.h  ProgressReporterFactory.h  SExtractorConfig.h  Sorter.h  SourceXtractorConfig.h
SEMain/conf/: sourcextractor++.conf
SEMain/scripts/: AppRun
SEPythonModule/: CMakeLists.txt
SEPythonModule/SEPythonModule/: ConfigAdapter.h  Context.h  Deblending.h  FitsOutput.h  Grouping.h  Measurement.h  NumpyOutput.h  Partition.h  PipelineReceiver.h  Segmentation.h  SourceInterface.h
SEUtils/: CMakeLists.txt
SEUtils/SEUtils/: CompareImages.h  HilbertCurve.h  IsClose.h  KdTree.h  Mat22.h  Misc.h  MmapAllocator.h  NumericalDerivative.h  Observable.h  PixelCoordinate.h  PixelRectangle.h  Python.h  QuadTree.h  TestUtils.h  Types.h  VariantCast.h
trunk/ExampleModule/: CMakeLists.txt
trunk/ModelFitting/: CMakeLists.txt
trunk/SEMain/: CMakeLists.txt
(+2194 files in other folders)
